syntax = "proto3";

package b;

// Interface exported by the server.
service B {
    rpc CallA(Req) returns (Empty) {}
    rpc CallB(Req) returns (Empty) {}
    rpc CallC(Req) returns (Empty) {}
}

message Req {
    string Name = 1;
}
// Empty msg
message Empty {}
